--- a/training/templates/training/automatic_mode.html
+++ b/training/templates/training/automatic_mode.html
@@ -1,1 +1,17 @@
-<h1>Plantilla automatica</h1>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Automatico</title>
+</head>
+<body>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <h3>Modo automatico</h3>
+    {% if result %}
+        <p>El resultado es: {{ result }}</p>
+    {% else %}
+        <p>No hay resultado disponible</p>
+    {% endif %}
+</body>
+</html>
