--- a/training/templates/training/base.html
+++ b/training/templates/training/base.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <h1>Landing page</h1>
     <li><a href={% url 'home' %}>Inicio</a></li>
     <li><a href={% url 'train' %}>Entrenamiento</a></li>
