--- a/training/templates/registration/login.html
+++ b/training/templates/registration/login.html
@@ -1,13 +1,50 @@
-{%extends 'training/home.html'%}
-{%block content%}
+{% extends 'training/home.html' %}
 
-<h3>Login</h3>
-<form action="" method="post">
-    {%csrf_token%}
-    <input type="text" name="username" id="" placeholder="Usuario">
-    <br>
-    <input type="password" name="password" id="" placeholder="Clave">
-    <br>
-    <input type="submit" value="Ingresar">
-</form>
-{%endblock%}
+{% block content %}
+<section class="vh-100 gradient-custom">
+<style>
+    .gradient-custom {
+    /* fallback for old browsers */
+    background: #6a11cb;
+    
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1));
+    
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1))
+    }
+</style>
+  <div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+        <div class="card bg-dark text-white" style="border-radius: 1rem;">
+          <div class="card-body p-5 text-center">
+
+            <div class="mb-md-5 mt-md-4 pb-5">
+
+              <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
+              <p class="text-white-50 mb-5">Please enter your login and password!</p>
+
+              <form method="post" action="">
+                {% csrf_token %}
+                <div class="form-outline form-white mb-6">
+                  <input type="text" id="typeUsername" name="username" class="form-control form-control-lg" placeholder="Usuario" required />
+                </div>
+
+                <div class="form-outline form-white mb-4 mt-4">
+                  <input type="password" id="typePassword" name="password" class="form-control form-control-lg" placeholder="Clave" required />
+                </div>
+
+
+                <button class="btn btn-outline-light btn-lg px-5 mb-5" type="submit">Ingresar</button>
+              </form>
+
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+{% endblock %}
