--- a/training/templates/training/automatic_mode.html
+++ b/training/templates/training/automatic_mode.html
@@ -3,15 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Automatico</title>
+    <title>Modo automático</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </head>
 <body>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <h3>Modo automatico</h3>
-    {% if result %}
-        <p>El resultado es: {{ result }}</p>
-    {% else %}
-        <p>No hay resultado disponible</p>
-    {% endif %}
+    <div class="container mt-5">
+        <h3>Modo automático</h3>
+        {% if result.empty %}
+            <p>No hay resultado disponible</p>
+        {% else %}
+            <div>
+                <h5>El resultado es:</h5>
+                <div class="table-responsive">
+                    {{ result|safe }}
+                </div>
+            </div>
+            <div>
+                {{ graph_div|safe }}
+            </div>
+        {% endif %}
+    </div>
 </body>
 </html>
