--- a/training/templates/training/base.html
+++ b/training/templates/training/base.html
@@ -4,18 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <h1>Landing page</h1>
-    <li><a href={% url 'home' %}>Inicio</a></li>
-    <li><a href={% url 'train' %}>Entrenamiento</a></li>
-    {% if request.user.is_authenticated %}
-        <li><a href={% url 'exit' %}>Salir</a></li>
-    {%else%}
-        <li><a href={% url 'login' %}>Ingresar</a></li>
-
-    {%endif%}
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <ul class="nav navbar-nav">
+                <li><a href={% url 'home' %}>Inicio</a></li>
+                <li><a href={% url 'train' %}>Entrenamiento</a></li>
+                {% if request.user.is_authenticated %}
+                    <li><a href={% url 'exit' %}>Salir</a></li>
+                {%else%}
+                    <li><a href={% url 'login' %}>Ingresar</a></li>
+                {%endif%}
+            </ul>
+        </div>
+    </nav>
+    <h1>Oliv-AI</h1>
     {% block content %}{% endblock %}
 </body>
 </html>
