--- a/training/templates/training/process_developer_mode.html
+++ b/training/templates/training/process_developer_mode.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </head>
 <body>
-    <h1>a</h1>
+    <h1>Proceso</h1>
+    {% if result.empty %}
+    <p>No hay resultado disponible</p>
+    {% else %}
+        <div>
+            <h5>El resultado es:</h5>
+                {{ result}}
+            </div>
+        </div>
+    {% endif %}
 </body>
-</html>l
+</html>
