--- a/training/templates/training/process_developer_mode.html
+++ b/training/templates/training/process_developer_mode.html
@@ -3,20 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <title>Resultados del Modelo</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Proceso</h1>
-    {% if result.empty %}
-    <p>No hay resultado disponible</p>
-    {% else %}
+    <div class="container mt-5">
+        <h2>Resultados del Modelo</h2>
         <div>
-            <h5>El resultado es:</h5>
-                {{ result}}
-            </div>
+            <p><strong>Modelo Seleccionado:</strong> {{ model_select }}</p>
+            <p><strong>Parámetros del Modelo:</strong> {{ model_parameters }}</p>
+            <p><strong>Porcentaje de Test:</strong> {{ test_percentage }}</p>
         </div>
-    {% endif %}
+        <div>
+            <h3>Predicciones</h3>
+            {{ result|safe }}
+        </div>
+        <div>
+            <h3>Gráfico</h3>
+            {{ graph_div|safe }}
+        </div>
+    </div>
 </body>
 </html>
