Vinculacion de archivos completa

--- a/training/templates/training/process_developer_mode.html
+++ b/training/templates/training/process_developer_mode.html
@@ -16,11 +16,11 @@
         </div>
         <div>
             <h3>Predicciones</h3>
-            {{ result|safe }}
+            {{ predictions|safe }}
         </div>
         <div>
-            <h3>Gráfico</h3>
-            {{ graph_div|safe }}
+            <h3>Metricas</h3>
+            {{ metricas|safe }}
         </div>
     </div>
 </body>
