--- a/training/templates/training/process_developer_mode.html
+++ b/training/templates/training/process_developer_mode.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Developer Mode</title>
+    <title>Custom Mode</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
     <div class="container">
-        <h1 class="mt-4">Developer Mode</h1>
-
+        <h1 class="mt-4">Custom Mode</h1>
         <div class="row mt-4">
             <div class="col-md-6">
                 <h2>Tipo de aprendizaje: {{ model_select }}</h2>
