--- a/training/templates/training/train.html
+++ b/training/templates/training/train.html
@@ -5,7 +5,7 @@
 
 <p>Elige un modo de entrenamiento:</p>
 <ul>
-    <li><a href="{% url 'developer_mode' %}">Modo Desarrollador</a></li>
+    <li><a href="{% url 'developer_mode' %}">Modo Personalizado</a></li>
     <li><a href="{% url 'automatic_mode' %}">Modo Automático</a></li>
 </ul>
 
